update abstractionkit examples reference links to github

--- a/docs/wallet/guides/0-getting-started.mdx
+++ b/docs/wallet/guides/0-getting-started.mdx
@@ -17,7 +17,7 @@ Candide builds open-source software for ERC-4337 account abstraction standard. T
 - Node and a package manager (yarn or npm)
 - Bundler API key from the [Candide Dashboard](https://dashboard.candide.dev) 
 - Some Sepolia ETH. Find Faucets [here](https://ethereum.org/en/developers/docs/networks/#sepolia)
-- If you need, fork the full example of this tutorial on [Github](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/CreateAccountAndSendTransaction)
+- If you need, fork the full example of this tutorial on [Github](https://github.com/candidelabs/abstractionkit-examples/blob/main/batch-transactions/batch-transactions.ts)
 
 
 ### Step 1: Get setup
