--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -17,7 +17,7 @@ If you are coming from the [previous guide](../getting-started), you only need o
 <img src="/img/gasless-transaction-screen.png" style={{ width: "300px" }} />
 
 ## Quickstart
-If you need, you can fork and run this tutorial directly on [Github](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/CreateAccountAndSendTransactionUsingSponsorPaymaster)
+If you need, you can fork and run this tutorial directly on [Github](https://github.com/candidelabs/abstractionkit-examples/blob/main/sponsor-gas/sponsor-gas.ts)
 
 ### Prerequisites
 
