--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -25,7 +25,7 @@ If you are coming from the [previous guide](../send-gasless-tx), you only need a
 - Node and a package manager (yarn or npm)
 - Bundler and Paymaster API key from the [Candide Dashboard](https://dashboard.candide.dev) 
 - Some Candide Test Tokens (CTT). Request CTT on our [Discord](https://discord.gg/8q2H6BEJuf)
-- If you need, fork the full example of this tutorial on on [Github](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/CreateAccountAndSendTransactionUsingTokenPaymaster)
+- If you need, fork the full example of this tutorial on on [Github](https://github.com/candidelabs/abstractionkit-examples/blob/main/pay-gas-in-erc20/pay-gas-in-erc20.ts)
 
 
 ### Step 1: Get setup
