--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -20,7 +20,7 @@ If you are coming from the [getting-started](../getting-started) guide, you only
 - Node and a package manager (yarn or npm)
 - Bundler API key from the [Candide Dashboard](https://dashboard.candide.dev) 
 - Some Sepolia ETH. Find Faucets [here](https://ethereum.org/en/developers/docs/networks/#sepolia)
-- If you need, fork the full example of this tutorial on [Github](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/CreateAccountAndSendTransactionMultiSigners)
+- If you need, fork the full example of this tutorial on [Github](https://github.com/candidelabs/abstractionkit-examples/blob/main/multisig/multisig.ts)
 
 
 ### Step 1: Get setup
