--- a/docs/wallet/guides/6-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/6-getting-started-eip-7702.mdx
@@ -22,7 +22,7 @@ In this example, you will learn how to upgrade an EOA to a Smart Account to leve
 - Sepolia Bundler and Paymaster endpoints from the [Dashboard](https://dashboard.candide.dev)
 - Node and a package manager (yarn or npm)
 
-Here's the [complete code](https://github.com/candidelabs/abstractionkit/tree/main/examples/SimpleAccount/UpgradeEOAto7702SimpleAccountAndSendTransactionWithSponsorPaymaster) for you to reference if you prefer to run directly.
+Here's the [complete code](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-sponsored-gas.ts) for you to reference if you prefer to run directly.
 
 ## Step 1: Get setup
 
