--- a/docs/wallet/guides/7-send-galess-eip-7702.mdx
+++ b/docs/wallet/guides/7-send-galess-eip-7702.mdx
@@ -24,6 +24,8 @@ Steps to Implement Gasless Transactions:
 1. Create a new app on the [dashboard](https://dashboard.candide.dev) and copy the Paymaster RPC URL into your `.env` file.
 2. Optionally, set up a Private Gas Policy on the dashboard and copy its sponsorship policy ID into your `.env` file.
 
+If you would like to see full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-sponsored-gas.ts).
+
 <Tabs>
 <TabItem value="index.ts" label="index.ts">
 
