--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -68,7 +68,7 @@ Built to server as a secondary interface for users to recover their Safe account
 ### Install
 
 :::tip
-Prefer to run a simple example? Fork this repo and add your first guardian [here](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/SocialRecovery). 
+Prefer to run a simple example? Fork this repo and add your first guardian [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/recovery/recovery.ts). 
 :::
 
 <Tabs>
