--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -54,6 +54,8 @@ By leveraging the Safe Allowance Module, wallet developers can implement sophist
 
 ## Usage
 
+If you would like to run an example, you can reference one [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/spend-permission/spend-permission.ts).
+
 ### Install
 
 <Tabs>
