--- a/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
+++ b/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
@@ -13,8 +13,11 @@ import TabItem from "@theme/TabItem";
 
 Offer the ability for users to pay gas in ERC-20s using any of the [supported ERC-20 Tokens](/wallet/paymaster/tokens-supported/) on Candide Paymaster.
 
-1. Create a new app on the [dashboard](https://dashboard.candide.dev) and copy the Paymaster RPC URL into your `.env` file.
+1. Create a new app on the [dashboard](https://dashboard.candide.dev) and copy the Paymaster URL into your `.env` file.
 2. Select an ERC-20 token to pay gas with and add its address to the `.env` file. We use CTT in this example. 
+
+
+If you would like to see full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-erc-20-gas.ts).
 
 <Tabs>
 <TabItem value="index.ts" label="index.ts">
