--- a/docs/wallet/guides/magic.mdx
+++ b/docs/wallet/guides/magic.mdx
@@ -17,7 +17,7 @@ Below are some relevant links that provide additional information and resources 
 
 - [How on-chain guardian recovery works](https://docs.candide.dev/wallet/plugins/recovery-with-guardians/)
 - [Guardian Recovery SDK Reference](https://docs.candide.dev/blog/making-accounts-recoverable/)
-- [Simple code example on GitHub](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/SocialRecovery)
+- [Simple code example on GitHub](https://github.com/candidelabs/abstractionkit-examples/blob/main/recovery/recovery.ts)
 - [Magic Documentation Website](https://magic.link/docs)
 
 ## Installation
