update configs to use public endpoints

--- a/blog/2024-09-30-abstractionkit-v0.2.0-release/index.mdx
+++ b/blog/2024-09-30-abstractionkit-v0.2.0-release/index.mdx
@@ -42,7 +42,7 @@ We highlight here the main features and the changelog for developers integrating
    ```js
    import { CandidePaymaster } from "abstractionkit";
 
-   const paymasterRpc = "https://api.candide.dev/paymaster/$version/$network/$apikey";
+   const paymasterRpc = "https://api.candide.dev/public/v3/sepolia";
    const paymaster: CandidePaymaster = new CandidePaymaster(paymasterRPC);
 
    // Construct user operation using createUserOperation()
