--- a/docs/wallet/abstractionkit/8-safe-account-v3.mdx
+++ b/docs/wallet/abstractionkit/8-safe-account-v3.mdx
@@ -146,7 +146,7 @@ This example mints the same NFT twice in a single useroperation
 import { MetaTransaction } from "abstractionkit";
 
 const jsonRpcNodeProvider = "https://rpc2.sepolia.org";
-const bundlerUrl = "https://api.candide.dev/bundler/version/network/YOUR_API_KEY";
+const bundlerUrl = "https://api.candide.dev/public/v3/sepolia";
 
 const transaction: MetaTransaction = {
     to: "0xD9de104e3386d9A45a61BcE269c43E48B534e4E7", // NFT contract address
@@ -359,7 +359,7 @@ console.log("receipt: ", receipt);
 ```terminal
 sendUserOperationResponse: {
   userOperationHash: '0x61b3e2c57ad7ad1ae788f0ac84c79b28aab8aeaf872be173cadc72ab8b3d4418',
-  bundler: { rpcUrl: 'https://api.candide.dev/bundler/version/network/YOUR_API_KEY' },
+  bundler: { rpcUrl: 'https://api.candide.dev/public/v3/sepolia' },
   entrypointAddress: '0x0000000071727De22E5E9d8BAf0edAc6f37da032'
 }
 
@@ -677,7 +677,7 @@ import {
   UserOperationV7
 } from "abstractionkit";
 
-const bundlerRPC = "https://api.candide.dev/bundler/version/network/YOUR_API_KEY";
+const bundlerRPC = "https://api.candide.dev/public/v3/sepolia";
 
 const ownerPublicAddress = "0xBdbc5FBC9cA8C3F514D073eC3de840Ac84FC6D31";
 const smartAccount = SafeAccount.initializeNewAccount([ownerPublicAddress])
