--- a/docs/wallet/guides/0-getting-started.mdx
+++ b/docs/wallet/guides/0-getting-started.mdx
@@ -44,8 +44,8 @@ npm i abstractionkit dotenv
 
 ```bash title=".env"
 CHAIN_ID=11155111
-BUNDLER_URL=https://api.candide.dev/bundler/version/network/YOUR_API_KEY
-JSON_RPC_NODE_PROVIDER=NODE_PROVIDER_URL
+BUNDLER_URL=https://api.candide.dev/public/v3/sepolia
+JSON_RPC_NODE_PROVIDER=https://ethereum-sepolia-rpc.publicnode.com
 
 #account owner pub & private key
 PRIVATE_KEY=YOUR_PRIVATE_KEY
