--- a/docs/wallet/guides/7-send-galess-eip-7702.mdx
+++ b/docs/wallet/guides/7-send-galess-eip-7702.mdx
@@ -73,7 +73,7 @@ userOperation = paymasterUserOperation;
 <TabItem value=".env" label=".env">
 
 ```env
-PAYMASTER_RPC=https://api.candide.dev/paymaster/$version/$network/$apikey
+PAYMASTER_RPC=https://api.candide.dev/public/v3/sepolia
 SPONSORSHIP_POLICY_ID=
 ```
 
