--- a/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
+++ b/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
@@ -62,7 +62,7 @@ if (tokenSelected) {
 <TabItem value=".env" label=".env">
 
 ```env
-PAYMASTER_RPC=https://api.candide.dev/paymaster/$version/$network/$apikey
+PAYMASTER_RPC=https://api.candide.dev/public/v3/sepolia
 TOKEN_ADDRESS=0xFa5854FBf9964330d761961F46565AB7326e5a3b # CTT address on sepolia
 ```
 
