--- a/docs/wallet/abstractionkit/7-safe-account-v2.mdx
+++ b/docs/wallet/abstractionkit/7-safe-account-v2.mdx
@@ -148,7 +148,7 @@ This example mints the same NFT twice in a single useroperation
 import { MetaTransaction } from "abstractionkit";
 
 const jsonRpcNodeProvider = "https://rpc2.sepolia.org";
-const bundlerUrl = "https://api.candide.dev/bundler/version/network/YOUR_API_KEY";
+const bundlerUrl = "https://api.candide.dev/public/v3/sepolia";
 
 const transaction: MetaTransaction = {
     to: "0xD9de104e3386d9A45a61BcE269c43E48B534e4E7", // NFT contract address
@@ -355,7 +355,7 @@ console.log("receipt: ", receipt);
 ```terminal
 sendUserOperationResponse: {
   userOperationHash: '0x61b3e2c57ad7ad1ae788f0ac84c79b28aab8aeaf872be173cadc72ab8b3d4418',
-  bundler: { rpcUrl: 'https://api.candide.dev/bundler/version/network/YOUR_API_KEY' },
+  bundler: { rpcUrl: 'https://api.candide.dev/public/v3/sepolia' },
   entrypointAddress: '0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789'
 }
 
@@ -722,7 +722,7 @@ import {
   UserOperationV6
 } from "abstractionkit";
 
-const bundlerRPC = "https://api.candide.dev/bundler/version/network/YOUR_API_KEY";
+const bundlerRPC = "https://api.candide.dev/public/v3/sepolia";
 
 const ownerPublicAddress = "0xBdbc5FBC9cA8C3F514D073eC3de840Ac84FC6D31";
 const smartAccount = SafeAccount.initializeNewAccount([ownerPublicAddress])
