--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -52,8 +52,8 @@ npm i abstractionkit dotenv
 
 ```bash title=".env"
 CHAIN_ID=11155111
-BUNDLER_URL=https://api.candide.dev/bundler/version/network/YOUR_API_KEY
-JSON_RPC_NODE_PROVIDER=NODE_PROVIDER_URL
+BUNDLER_URL=https://api.candide.dev/public/v3/sepolia
+JSON_RPC_NODE_PROVIDER=https://ethereum-sepolia-rpc.publicnode.com
 
 #account owner pub & private key
 PRIVATE_KEY=YOUR_PRIVATE_KEY
@@ -206,7 +206,7 @@ if (tokenSelected) {
 <TabItem value=".env" label=".env">
 
 ```env
-PAYMASTER_RPC=https://api.candide.dev/paymaster/$version/$network/$apikey
+PAYMASTER_RPC=https://api.candide.dev/public/v3/sepolia
 TOKEN_ADDRESS=0xFa5854FBf9964330d761961F46565AB7326e5a3b # CTT address on sepolia
 ```
 
