--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -47,8 +47,8 @@ npm i abstractionkit dotenv
 
 ```terminal title=".env"
 CHAIN_ID=11155111
-BUNDLER_URL=https://api.candide.dev/bundler/version/network/YOUR_API_KEY
-JSON_RPC_NODE_PROVIDER=NODE_PROVIDER_URL
+BUNDLER_URL=https://api.candide.dev/public/v3/sepolia
+JSON_RPC_NODE_PROVIDER=https://ethereum-sepolia-rpc.publicnode.com
 
 //highlight-start
 #account owner pub & private key
