--- a/docs/wallet/guides/6-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/6-getting-started-eip-7702.mdx
@@ -48,8 +48,8 @@ npm i abstractionkit dotenv ethers
 ```bash title=".env"
 CHAIN_ID=11155111
 JSON_RPC_NODE_PROVIDER=https://ethereum-sepolia-rpc.publicnode.com
-BUNDLER_URL=https://api.candide.dev/bundler/v3/sepolia/APY_KEY
-PAYMASTER_URL=https://api.candide.dev/paymaster/v3/sepolia/APY_KEY
+BUNDLER_URL=https://api.candide.dev/public/v3/sepolia
+PAYMASTER_URL=https://api.candide.dev/public/v3/sepolia
 ```
 
 4. Create a empty file and a function to run our script
