--- a/docs/wallet/guides/recovery-with-google-using-lit.mdx
+++ b/docs/wallet/guides/recovery-with-google-using-lit.mdx
@@ -38,7 +38,7 @@ Configure the values you created from Lit dashboard in an .env file
 LIT_API_KEY=Request Relay Server API Key from Lit at https://forms.gle/RNZYtGYTY9BcD9MEA
 
 // Candide
-BUNDLER_URL="https://api.candide.dev/bundler/version/network/YOUR_API_KEY" // Other networks are found here: https://docs.candide.dev/wallet/bundler/rpc-endpoints
+BUNDLER_URL="https://api.candide.dev/public/v3/sepolia" // Other networks are found here: https://docs.candide.dev/wallet/bundler/rpc-endpoints
 PAYMASTER_URL="Request an API key from Candide on Discord"
     
 // Generate a Public/Private Key
