--- a/docs/wallet/abstractionkit/4.utilities.mdx
+++ b/docs/wallet/abstractionkit/4.utilities.mdx
@@ -32,6 +32,9 @@ A set of utilities for ERC-4337 Account Abstraction to help you with your develo
 ### getBalance
 Returns the balance of an account in the entrypoint contract
 
+## simulateUserOperationWithTenderlyAndCreateShareLink
+Simulate a userOperation with Tenderly and returns a link
+
 #### Source code
 [getBalance](https://github.com/candidelabs/abstractionkit/blob/b1826217624c1f7105fef58f56c3ffab93a57a4b/src/utils.ts#L457)
 
