--- a/docs/wallet/guides/5-authentication.mdx
+++ b/docs/wallet/guides/5-authentication.mdx
@@ -53,10 +53,8 @@ consistent process for assigning  smart account ownership and signing User Opera
 on how to integrate as third-parties as main signer, you can refer to the [guide for EOA wallets and Third Party Signers](./#eoa-wallets--third-party-signers).
 
 - However, it is important to note that using third-party services as the primary signer of 
-the account makes the wallet you are offering ** custodial.** Candide recommends using onchain 
-[Safe Passkeys](/wallet/plugins/passkeys) as the main signer, while offering third-parties as 
-recovery options via the onchain [Guardian Recovery](../plugins/1-recovery-with-guardians.mdx). 
-This approach ensures progressive self-custody, allowing users to modify their recovery options as needed.
+the account makes the wallet you are offering **custodial.** Candide recommends using onchain 
+[Safe Passkeys](/wallet/plugins/passkeys) as the main signer.
 
 Below are some third-party recovery options that you can consider. Candide does not endorse any of these options; the guides are provided for educational purposes only.
 
