--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -63,6 +63,15 @@ Built to server as a secondary interface for users to recover their Safe account
 - Link: https://safecover.eth.limo
 - Source code for releases: [candidelabs/safecover](https://github.com/candidelabs/safecover)
 
+#### Safe Recovery Services
+
+Secure Safe Accounts with a diverse set of recovery options like trusted contacts, email/SMS verification, Passkeys, secondary devices and more. 
+
+- Offer email / sms recovery with Candide as a Guardian. 
+- Offer an alert system for owners to get notified in case of recovery.
+
+Learn more on [Safe Recovery Services](/wallet/recovery/overview/)
+
 ## Usage
 
 ### Install
