improve instagas title pages and other miscs updates

--- a/docs/instagas/3-introduction.mdx
+++ b/docs/instagas/3-introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: InstaGas Overview | Gas Sponsorship for any dApp
+title: InstaGas Introduction | The Problems with Gas
 description: A No-Code Gas Sponsorship Paymaster for decentralized applications (dApps)
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
 image: /img/posters/paymaster-meta.png
