--- a/docs/instagas/4-usecases.mdx
+++ b/docs/instagas/4-usecases.mdx
@@ -1,5 +1,5 @@
 ---
-title: InstaGas Usecases | Gas Sponsorship for any dApp
+title: InstaGas Usecases | Gas Sponsorship for Dapps
 description: Real world applications and usecases of InstaGas Policies for Gas Sponsorship
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
 image: /img/posters/paymaster-meta.png
