--- a/docs/instagas/5-architecture.mdx
+++ b/docs/instagas/5-architecture.mdx
@@ -1,5 +1,5 @@
 ---
-title: InstaGas Architecture | Gas Sponsorship for any dApp 
+title: InstaGas Architecture | How Gas Policies enable Gas Sponsorship for any Wallet 
 description: InstaGas is a paymaster that enables gas sponsorship through customizable Gas Policies, supporting ERC-20 token payments as a fallback. It's future-ready, compatible with EIP-7702 and RIP-7560.
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
 image: /img/posters/paymaster-meta.png
