improve account abstraction title pages

--- a/docs/account-abstraction/7702/1-overview.mdx
+++ b/docs/account-abstraction/7702/1-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: EIP-7702 Overview
+title: What is EIP-7702, what features it enables and what are its limitation
 description: Add a new tx type that permanently sets the code for an EOA
 keywords: [EIP-7702, Externally Owned Accounts, EOAs, smart contract wallets, Ethereum, ERC-4337, batching, sponsorship, privilege de-escalation]
 ---
