improve abstractionkit sdk reference title pages

--- a/docs/wallet/abstractionkit/0-introduction.mdx
+++ b/docs/wallet/abstractionkit/0-introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Why AbtractionKit 
-description: A Typescript Library to easily build and send ERC-4337 UserOperations, with first class support fot Safe Accounts
+title: Why use AbtractionKit to build Smart Accounts 
+description: Abstractionkit is a typescript library to easily build and send UserOperations, with first class support fot Safe Accounts and Simple EIP-7702 Accounts
 image: /img/posters/abstractionkit-meta.png
 keywords: [typescript, sdk, userOperation, library]
 ---
