--- a/docs/wallet/abstractionkit/1.bundler.mdx
+++ b/docs/wallet/abstractionkit/1.bundler.mdx
@@ -1,5 +1,5 @@
 ---
-title: Bundler
+title: AbstractionKit Bundler Class SDK Reference
 description: Learn how to use AbstractionKit to send ERC-4337 UserOperations to a Bundler
 image: /img/posters/abstractionkit-meta.png
 keywords: [bundler, "4337", "sdk", account-abstraction]
