--- a/docs/wallet/abstractionkit/3.paymaster.mdx
+++ b/docs/wallet/abstractionkit/3.paymaster.mdx
@@ -1,5 +1,5 @@
 ---
-title: Paymaster
+title: AbstractionKit Paymaster Class SDK Reference
 description: Learn how to use AbstractionKit to sponsor gas using an ERC-4337 verifying paymaster
 keywords: [paymaster, "verifying", "sdk", gas-abstraction, sponsor-gas]
 image: /img/posters/abstractionkit-meta.png
@@ -45,6 +45,7 @@ import {
 import { smartAccountParameters } from "../../../src/data/accountParamAndReturnData";
 import { userOperationParamV07 } from "../../../src/data/userOperation";
 
+# Paymaster
 A `CandidePaymaster` is a class interacts with Candide's ERC-4337 Paymaster API. 
 
 Supports:
