--- a/docs/wallet/abstractionkit/4.utilities.mdx
+++ b/docs/wallet/abstractionkit/4.utilities.mdx
@@ -1,5 +1,5 @@
 ---
-title: Utilities
+title: AbstractionKit Utilities SDK Reference 
 description: A set of utilities for Account Abstraction to help you focus on what matters 
 keywords: [utilities, "4337", sdk, account-abstraction, helpers]
 ---
