--- a/docs/wallet/abstractionkit/6-safe-account.mdx
+++ b/docs/wallet/abstractionkit/6-safe-account.mdx
@@ -1,11 +1,12 @@
 ---
-title: Safe Account
+title: AbstractionKit Safe Account Versions
 description: Learn how to offer, deploy and transact with Safe Accounts using ERC-4337
 image: /img/posters/abstractionkit-meta.png
 keywords: [safe-account, "4337", sdk, account-abstraction, gnosis-safe]
 ---
 import CardList from "/src/components/CardList";
 
+# Safe Account
 The `SafeAccount` uses the original Safe Singleton and adds ERC-4337 functionality using a module/fallback handler. 
 
 - The V2 contracts, or `SafeAccountV0_2_0` in AbstractionKit, supports EntryPoint v0.6.
