--- a/docs/wallet/abstractionkit/7-safe-account-v2.mdx
+++ b/docs/wallet/abstractionkit/7-safe-account-v2.mdx
@@ -1,5 +1,5 @@
 ---
-title: Safe Account V2
+title: AbstractionKit Safe Account V2 for EntryPoint v0.6 SDK Reference
 description: Learn how to offer, deploy and transact with Safe Accounts using ERC-4337 EntryPoint v0.6
 image: /img/posters/abstractionkit-meta.png
 keywords: [safe-account, "4337", sdk, account-abstraction, gnosis-safe]
@@ -59,6 +59,8 @@ import {
   stateOverrideSetParameters,
   addressToStateParameters,
 } from "../../../src/requestRpcData";
+
+# Safe Account V2
 
 **Safe Account V2** uses the original Safe Singleton and adds ERC-4337 functionality using a module/fallback handler. 
 
