--- a/docs/wallet/abstractionkit/8-safe-account-v3.mdx
+++ b/docs/wallet/abstractionkit/8-safe-account-v3.mdx
@@ -1,5 +1,5 @@
 ---
-title: Safe Account V3
+title: AbstractionKit Safe Account V3 for EntryPoint v0.7 SDK Reference
 description: Learn how to offer, deploy and transact with Safe Accounts using ERC-4337 EntryPoint v0.7
 image: /img/posters/abstractionkit-meta.png
 keywords: [safe-account, "4337", sdk, account-abstraction, gnosis-safe]
@@ -57,6 +57,8 @@ import {
   stateOverrideSetParameters,
   addressToStateParameters,
 } from "../../../src/requestRpcData";
+
+# Safe Account V3
 
 **Safe Account V3** uses the original Safe Singleton and adds ERC-4337 functionality using a module/fallback handler. 
 
