--- a/docs/wallet/abstractionkit/9-simple-7702-account.mdx
+++ b/docs/wallet/abstractionkit/9-simple-7702-account.mdx
@@ -1,10 +1,11 @@
 ---
-title: Simple 7702 Account
+title: AbstractionKit EIP-7702 Simple Account for EntryPoint v0.8 SDK Reference 
 description: Learn how to upgrade EOAs to Smart Accounts with fully audited Smart Contracts
 keywords: [safe-account, "4337", sdk, account-abstraction, gnosis-safe]
 ---
 import CardList from "/src/components/CardList";
 
+# Simple 7702 Account
 The `Simple7702Account` is a fully audited minimalist smart contract account that can be safely authorized by any EOA. It adds full support for 
 major smart account features like batching and gas sponsorship.
 
