improve bundler pages title

--- a/docs/wallet/bundler/2-rpc-methods.mdx
+++ b/docs/wallet/bundler/2-rpc-methods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Bundler API
+title: ERC-4337 Bundler API Reference
 description: A reference to the supported RPC methods by an ERC-4337 Bundler
 image: /img/posters/voltaire-meta.png
 ---
