add truncate to unified aa blog post

--- a/blog/2024-11-12-bundler-unified-mempool/index.mdx
+++ b/blog/2024-11-12-bundler-unified-mempool/index.mdx
@@ -8,7 +8,7 @@ tags: [bundler]
 ---
 
 ERC-4337 aims to bring Account Abstraction to Ethereum while maintaining strong decentralization and censorship-resistance, aligning closely with the block production security of the underlying chain. Launching a truly public and decentralized mempool for ERC-4337 is a complex process, and development will progress with “training wheels” — a controlled setup that allows for system updates and bug fixes in a safer environment. While necessary in the early stages, these training wheels will be gradually removed, enabling Bundlers to fully adopt the decentralized principles of the base layer.
-
+{/* truncate */}
 To guide this evolution, the ERC-4337 Team introduced a framework, inspired by Vitalik’s proposed milestones for Rollups and L2Beat Stages Framework, which categorizes Bundler Mempool development into distinct stages. Each stage defines specific conditions and requirements for advancing, building toward a fully open and decentralized mempool. As the framework progresses, it enhances user benefits at every stage, such as censorship resistance, decentralization, and permissionless.
 
 ### Stage 0 — Independent Operation
