improve started guides title

--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -1,5 +1,5 @@
 ---
-title: Send Gasless Transactions
+title: How to send a sponsored gas transaction using a paymaster with abstractionkit
 description: Learn how to send gasless transactions using a paymaster
 keywords: [paymaster, gasless, sponsored]
 image: /img/gasless-transaction-screen.png
