--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -1,5 +1,5 @@
 ---
-title: Pay Gas in ERC-20
+title: How to send transaction with gas payed in erc-20 using a paymaster with abstractionkit
 description: Learn how to offer the ability for users to pay gas in ERC-20s using paymasters
 keywords: [paymaster, pay-gas-in-erc20]
 image: /img/network-fees-sponsorship.png
