improve all guides titles

--- a/docs/wallet/guides/0-getting-started.mdx
+++ b/docs/wallet/guides/0-getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to send your first smart account transaction with abstractionkit
+title: How to send your first smart account user operation with abstractionkit
 description: Learn how to create a smart wallet and to send your first erc-4337 user operation 
 keywords: [create-smart-wallet, initCode, userOperation]
 ---
