--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -1,5 +1,5 @@
 ---
-title: Multisig
+title: How to deploy a Safe Account with multisig support using abstractionkit
 description: Learn how to create a multisig account and sign with all parties a userOperation
 keywords: [create-smart-wallet, multisig, userOperation]
 ---
