--- a/docs/wallet/guides/4-signing.mdx
+++ b/docs/wallet/guides/4-signing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Signing Messages
+title: How to sign messages messages using a Safe Account and validating them
 description: Learn how sign messages using Safe wallet and verifing its signature using EIP-1271 Signature Validation 
 keywords: [signing-messages, smart-contract-signature, eip-1271]
 ---
