--- a/docs/wallet/guides/5-authentication.mdx
+++ b/docs/wallet/guides/5-authentication.mdx
@@ -1,5 +1,5 @@
 ---
-title: Authentication
+title: The difference authentication that can be used with smart accounts using abstractionkit
 description: Learn how to manage user authentification with smart accounts
 image: /img/posters/abstractionkit-meta.png
 keywords: [mpc, hosted-wallets, social-login, passkeys, biometrics]
