--- a/docs/wallet/guides/6-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/6-getting-started-eip-7702.mdx
@@ -1,5 +1,5 @@
 ---
-title: Upgrade an EOA to a EIP-7702 Smart Account   
+title: How to upgrade an EOA to an EIP-7702 Smart Account using Abstractionkit   
 description: Learn how to upgrade an EOA to a EIP-7702 Smart Account to leverage features such as batching and gas sponsorship  
 keywords: [eip-7702, smart-account, batching, EOA, metamask]
 ---
