--- a/docs/wallet/guides/7-send-galess-eip-7702.mdx
+++ b/docs/wallet/guides/7-send-galess-eip-7702.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Send a Gasless Transaction Using EIP-7702   
+title: How to sponsored gas for EIP-7702 Accounts using abstractionkit
 description: Learn how to upgrade an EOA to a EIP-7702 Smart Account and send a gasless transaction  
 keywords: [eip-7702, smart-account, gasless, EOA, gas sponsorship]
 ---
