--- a/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
+++ b/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Pay Gas in ERC-20 Tokens Using EIP-7702   
+title:  How to pay gas in erc-20 tokens for EIP-7702 Accounts using abstractionkit   
 description: Learn how to upgrade an EOA to a EIP-7702 Smart Account and let users pay gas in ERC-20s using paymasters  
 keywords: [eip-7702, smart-account, pay gas in erc20, EOA, gas sponsorship]
 ---
