--- a/docs/wallet/guides/9-simulate-transaction.mdx
+++ b/docs/wallet/guides/9-simulate-transaction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Simulate Transactions with Tenderly
+title: How to simulate transactions with Tenderly Service using abstractionkit
 keywords: [simulate transaction, tenderly, simulate user operation, simulate safe calldata]
 description: Learn how to simulate calldata and User Operation using Tenderly to debug potential issues before sending them onchain.
 ---
