--- a/docs/wallet/guides/magic.mdx
+++ b/docs/wallet/guides/magic.mdx
@@ -1,5 +1,5 @@
 ---
-title: Magic
+title: How to use Magic service as an authentication scheme for smart accounts using abstractionkit
 description: Learn how to offer a recovery options for your user using Magic and AbstractinKit
 image: /img/posters/abstractionkit-meta.png
 keywords: [mpc,hosted-wallets,social-login, passkeys, biometrics]
