--- a/docs/wallet/guides/onchain-identifiers.mdx
+++ b/docs/wallet/guides/onchain-identifiers.mdx
@@ -1,5 +1,5 @@
 ---
-title: Onchain Tracking
+title: How to add an onchain identifier to track Safe Accounts using abstractionkit
 description: Learn how to add an onchain Identifier to all your ERC-4337 Safe transactions, allowing to track them on-chain
 keywords: [Identifier, on-chain]
 ---
