--- a/docs/wallet/guides/recovery-with-google-using-lit.mdx
+++ b/docs/wallet/guides/recovery-with-google-using-lit.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add a Google Account as a Recovery Method using Lit (Guide 1/2)
+title: How to use Lit service as a recovery mechanim smart accounts using abstractionkit (Guide 1/2)
 description: Learn how to offer a google recovery option for your users using Lit
 image: /img/posters/abstractionkit-meta.png
 keywords: [google-account, recovery ,guardians, safe-account, recovery-module]
