--- a/docs/wallet/guides/turnkey.mdx
+++ b/docs/wallet/guides/turnkey.mdx
@@ -1,5 +1,5 @@
 ---
-title: Turnkey
+title: How to use Turnkey service as recovery mechanism for smart accounts using abstractionkit
 description: Learn how to offer a recovery option for your user using Turnkey and AbstractinKit
 keywords: ["turnkey", "email recovery", "smart wallet recovery"]
 ---
