improve titles for paymatser and safe recovery pages

--- a/docs/wallet/plugins/0-passkeys.mdx
+++ b/docs/wallet/plugins/0-passkeys.mdx
@@ -1,5 +1,5 @@
 ---
-title: Passkeys
+title: Passkeys Guide and Reference for Authenticating Safe Smart Accounts using abstractionkit
 description: Utilize Passkeys for securing and backing up user Safe smart accounts through biometric authentication.
 keywords: [passkeys, webauthn, safe, plugin]
 image: /img/posters/passkeys_poster.png
