--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -1,5 +1,5 @@
 ---
-title: Account Recovery 
+title: Account Recovery guide and reference for adding recovery methods for Safe Accounts using abstractionkit 
 description: Active onchain account recovery with gaurdians through a time delay for Safe Accounts. 
 keywords: [guardian, recovery, social-recovery, safe-recovery, gnosis-safe]
 ---
