--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -1,5 +1,5 @@
 ---
-title: Allowance | Spend Permissions
+title: Allowance module guide and reference for adding spend permissions to Safe Accounts using abstractionkit
 description: Implement recurring transactions, scheduled orders, and subscription management using the Safe Allowance Module
 keywords: [allowance, safe, reccuring, reccuring-transfers, subscriptions]
 image: /img/posters/abstractionkit-meta.png
