--- a/docs/wallet/recovery/1-overview.mdx
+++ b/docs/wallet/recovery/1-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Safe Recovery Service
+title: An overview of Safe Recovery Service offered by Candide
 description: An overview of Candide's Safe Recovery Service and how it works. Features signature aggregation, gas sponsorship, recovery request monitoring, signature storage, and auto-execution.
 keywords: [safe recovery, social recovery, smart wallet, email recovery, guardian recovery]
 ---
