--- a/docs/wallet/recovery/2-ux-api.mdx
+++ b/docs/wallet/recovery/2-ux-api.mdx
@@ -1,5 +1,5 @@
 ---
-title: Safe Recovery Service API
+title: Safe Recovery Service for UX Features and Alerts | API Reference
 description: API specification for Candide's Safe Recovery Service. Features signature aggregation, gas sponsorship, recovery request monitoring, signature storage, and auto-execution.
 keywords: [safe recovery, social recovery, smart wallet, email recovery, guardian recovery]
 ---
