--- a/docs/wallet/recovery/3-auth-api.mdx
+++ b/docs/wallet/recovery/3-auth-api.mdx
@@ -1,5 +1,5 @@
 ---
-title: Email/SMS Safe Recovery API
+title: Safe Recovery Serice using Email/SMS | API Reference
 description: API specification for Candide's Safe Recovery Service. Features email / sms recovery, multifactor auth, and an alert system for on and offchain monitoring for active recovery.
 keywords: [safe recovery, social recovery, smart wallet, email-sms recovery, guardian recovery]
 ---
