--- a/docs/wallet/paymaster/0-rpc-methods-v2.mdx
+++ b/docs/wallet/paymaster/0-rpc-methods-v2.mdx
@@ -1,5 +1,5 @@
 ---
-title: RPC Methods
+title: Candide Paymaster V2 API Reference
 description: JSON-RPC API reference for Candide's Verifying Paymaster service. Learn about sponsoring gas, and how to enable gas payments in stablecoins
 image: /img/posters/paymaster-meta.png
 keywords: [paymaster, gas sponsorship, pay gas in stablecoin]
