--- a/docs/wallet/paymaster/0-rpc-methods.mdx
+++ b/docs/wallet/paymaster/0-rpc-methods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Paymaster API
+title: Candide Paymaster V3 API Reference
 description: JSON-RPC API reference for Candide's Paymaster service. Learn about sponsoring gas, and how to enable gas payments in stablecoins
 image: /img/posters/paymaster-meta.png
 keywords: [paymaster, gas sponsorship, pay gas in stablecoin]
