--- a/docs/wallet/paymaster/1-tokens-supported.mdx
+++ b/docs/wallet/paymaster/1-tokens-supported.mdx
@@ -1,5 +1,5 @@
 ---
-title: ERC-20 Tokens Supported
+title: List of ERC-20 Tokens Supported as Gas Payments with Candide Paymaster
 description: List of ERC-20 Token accepted for Candide's Paymaster. Learn about sponsoring gas, and how to enable gas payments in stablecoins
 image: /img/posters/paymaster-meta.png
 keywords: [paymaster, gas sponsorship, pay gas in stablecoin]
