improve bundler error page titles

--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deployment Addresses
+title: Deployment Addresses for all smart contracts that Candide uses
 description: All of the deployments to production networks that make up all contracts being used to build on Account Abstractions with Candide
 keywords: [deployments, addresses, etherscan, verifed]
 ---
